--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ h2 {
 	display:inline-block; 
 	font-size:13px; 
 	line-height:2em;
-	color:#808080; 
+	color:#fff; 
 	text-transform:uppercase;
 }
 .menu li a.active,
@@ -591,4 +591,7 @@ footer {
 #ms {
 	width: 200px;
 	height: 32px;
+}
+#row {
+	background-color: #648675;
 }
