--- a/css/styles.css
+++ b/css/styles.css
@@ -20,3 +20,13 @@
 	background-color: rgba(9, 109, 22, 0.75);
 	max-width: 980px;
 }
+
+@media (min-width:490px) and (max-width:767px) {
+#header {
+	position: inherit;
+	z-index: 10;
+	background-color: rgba(9, 109, 22, 0.75);
+	max-width: 980px;
+}
+
+ }
