--- a/css/styles.css
+++ b/css/styles.css
@@ -45,4 +45,11 @@
  	 	text-align: center;
  	 }
  }
-
+ @media (max-width: 450px) {
+#colswap {
+	width: 58.33333333%;
+}
+#logo{
+	display: none;
+}
+ }
